--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -3,5 +3,5 @@ on: push
 jobs:
   runMake:
     runs-on: ubuntu-latest
-      - uses: action/checkout@v2
+      - uses: actions/checkout@v2
       - run: make say-hello
